Update input placeholder for name field

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="editor">
             <h1>AUSTINE CREATIVES</h1>
             <label>NAME & TITLE</label>
-            <input type="text" id="inputName" placeholder="e.g., VICE CHANCELLOR HYTONE" oninput="updateText()">
+            <input type="text" id="inputName" placeholder="e.g., AUSTINE" oninput="updateText()">
             
             <label>THE MESSAGE</label>
             <textarea id="inputMessage" placeholder="e.g., Happy New Year 2026" oninput="updateText()"></textarea>
